demos/basketball: Add score images
Signed-off-by: Ragner Magalhaes <ext-ragner.magalhaes@nokia.com>

--- a/demos/basketball/resources.qrc
+++ b/demos/basketball/resources.qrc
@@ -4,5 +4,8 @@
     <file>images/backboardhandler.png</file>
     <file>images/basket.png</file>
     <file>images/ball.png</file>
+    <file>images/blankball.png</file>
+    <file>images/failball.png</file>
+    <file>images/scoreball.png</file>
 </qresource>
 </RCC>
